Cart: ensure cart summary opens on iPhone. Tidy Cart total.

--- a/src/stylesheets/main.styl
+++ b/src/stylesheets/main.styl
@@ -171,8 +171,15 @@ $merriweather-20
     height 50px
 
   #shopping-cart-toggle
+    border 0px
+    padding 0px
+    padding-left 10px
+    padding-right 5px
     &:hover
       cursor pointer
+    &:focus
+      background-color white
+      background-image none
 
 /*body|content*/
 .content
@@ -421,11 +428,15 @@ li.terms-section
 
 /*cart*/
 .simpleCart_total
-  text-align right
-  border-bottom 2px solid rm-blue
-  padding-right 46px // not responsive :/
-  padding-bottom 10px
-  margin-bottom 20px
+  border-bottom 4px solid #0184a2
+  // margin-bottom 20px
+  padding 10px
+  padding-bottom 0px
+  text-align center
+
+.pure-skin-rm
+  .modal-footer
+    border 0px solid red
 
 .item_add
   width 100%
